[package]
name = "pusher-http-rust"
version = "1.0.0"
edition = "2024"
description = "A Rust client for interacting with the Pusher HTTP API"
license = "AGPL"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
thiserror = "1.0"
url = "2.4"
rand = "0.8"
md5 = "0.7"
regex = "1.9"
hex = "0.4.3"
sodiumoxide = "0.2.7"

[dev-dependencies]
tokio-test = "0.4"
