[package]
name = "pushers"
version = "1.1.0"
edition = "2024"
repository = "https://github.com/RustNSparks/pusher-http-rust"
description = "A Rust client for interacting with the Pusher HTTP API"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
thiserror = "2.0"
url = "2.4"
rand = "0.9.1"
md5 = "0.7"
regex = "1.9"
hex = "0.4.3"
sodiumoxide = "0.2.7"
subtle="*"
zeroize={ version = "*", features = ["zeroize_derive"] }

[dev-dependencies]
tokio-test = "0.4"
